Fixed some layout issues. Added new Reimbursement form. Added APICall functions and Date Functions

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body{
 }
 .app-container{
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: auto;
   background-color:#384E77;
   border: 1px solid black;
