--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     position:absolute;
     z-index: 12;
-    height: 100%;
+    max-height: 100%;
 }
 .sidebar h1 {
   color: #ccc;
