--- a/src/components/sidebar/SidebarButton.css
+++ b/src/components/sidebar/SidebarButton.css
@@ -1,6 +1,6 @@
 .sidebar button{
     background-color:#8BBEB2;
-    height: 7em;
+    height: 6em;
     width: 15em;
     color: black;
     border-radius: 2px;
